Bug 401376 - Unnecessary confirmation for reloading
Summary: Unnecessary confirmation for reloading
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 18.08.3
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2018-11-24 20:11 UTC by Nicolas Fella
Modified: 2018-12-20 22:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2018-11-24 20:11:41 UTC
SUMMARY
When a file is changed externally and I do Reload (F5) I get a prompt asking me whether I want to reload the file or ignore the changes, which is unnecessary since my inention is to reload the file 

STEPS TO REPRODUCE
1. Externally modify an open file
2. Reload

OBSERVED RESULT
Dialog asking whether I want to reload/ignore changes appears


EXPECTED RESULT
File reloads immediately


SOFTWARE/OS VERSIONS
KDE Frameworks Version: 5.52
Qt Version: 5.11.2
Comment 1 Nate Graham 2018-11-26 17:11:50 UTC
Yeah, this makes sense. It should only show you the confirmation message when the reloading happened automatically, not when it was explicitly triggered by the user.

I bet the code change to fix this is pretty simple.
Comment 2 Lucas 2018-11-26 19:41:15 UTC
Hi there, I'm new to Kate, but I started working on this issue is this ok?
Comment 3 Nicolas Fella 2018-11-26 19:42:48 UTC
(In reply to Lucas from comment #2)
> Hi there, I'm new to Kate, but I started working on this issue is this ok?

I've already started working on it. https://phabricator.kde.org/D17178
Comment 4 Lucas 2018-11-26 20:11:17 UTC
Oh, ok, thanks!
Comment 5 Nicolas Fella 2018-12-20 22:47:47 UTC
Git commit 82a1673746eacfe4562b801c5cc45b7c3c0ee233 by Nicolas Fella.
Committed on 20/12/2018 at 22:47.
Pushed by nicolasfella into branch 'master'.

Don't ask for confimation when reloading

Summary:
When reloading the document it is unnecessary to show the document modified dialog that offers to reload
since that is what the user expects.

Test Plan: Modify document externally, relaod via F5 -> no confirmation dialog

Reviewers: #kate, ngraham, cullmann

Reviewed By: #kate, cullmann

Subscribers: cullmann, kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D17178

M  +0    -23   src/document/katedocument.cpp

https://commits.kde.org/ktexteditor/82a1673746eacfe4562b801c5cc45b7c3c0ee233