Don't ask for confimation when reloading

Summary:
When reloading the document it is unnecessary to show the document modified dialog that offers to reload
since that is what the user expects.

BUG: 401376

Test Plan: Modify document externally, relaod via F5 -> no confirmation dialog

Reviewers: #kate, ngraham, cullmann

Reviewed By: #kate, cullmann

Subscribers: cullmann, kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D17178